--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Vo Quang Hoa's homepage</title>
+</head>
 <body>
 	Welcome to my page
 </body>
