--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Vo Quang Hoa's homepage</title>
-</head>
-<body>
-	Welcome to my page
-</body>
+<html>
+    <head>
+        <title>JUB1 - Products</title>
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" ></script>
+
+    </head>
+    <body>
+
+            <div class="content">
+                <div class="card-group">
+				  <div class="card">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					</div>
+					<div class="card-footer">
+					  <small class="text-muted">Last updated 3 mins ago</small>
+					</div>
+				  </div>
+				  <div class="card">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+					</div>
+					<div class="card-footer">
+					  <small class="text-muted">Last updated 3 mins ago</small>
+					</div>
+				  </div>
+				  <div class="card">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+					</div>
+					<div class="card-footer">
+					  <small class="text-muted">Last updated 3 mins ago</small>
+					</div>
+				  </div>
+				</div>
+            </div>
+
+    </body>
 </html>
-	
